# uni

./: Групповое Заявление Олима.docx  Декану ФКСиС.docx  Объяснительная общежитие.odt  Протокол группы 253505.docx  заявление на передачу дежурства в общаге.odt  освобождение.docx
.ssh/: config  id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub  known_hosts  known_hosts.old
12sem/bel/: бел яз.docx
12sem/eng/: Topic 3-4 new.docx  Topic 3-4.docx  Topic Computer Networks.docx  Topic Computer Programming.docx  Topic Information Systems.docx  Topic.University Studies.docx  What is the Internet of Things.docx  Wordlist - Module 1.docx  Wordlist - Module II.docx  topic 1.docx  topic 5.docx  topic 6.docx  topic 7.docx  university.odt
12sem/fiz/: Ебаный рот этого Сократа.docx  Ебаный рот этого Сократа1.docx  Лабораторная работа №2.docx
12sem/okg/: А3 со слоями.dwt  Титульный ОКГ.dwg
3sem/KPROG/labs/lab8/: CMakeLists.txt  README.md  ОтчетКПрогЛР8.docx
3sem/KPROG/labs/lab8/.github/workflows/: cmake_ctest.yml
3sem/KPROG/labs/lab8/JUCE/: .clang-tidy  .gitlab-ci.yml  BREAKING_CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
3sem/KPROG/labs/lab8/JUCE/.github/: contributing.md  pull_request_template.md
3sem/KPROG/labs/lab8/JUCE/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
3sem/KPROG/labs/lab8/JUCE/.github/workflows/: check-cla.yml
3sem/KPROG/labs/lab8/JUCE/docs/: ARA.md  Accessibility.md  CMake API.md  Linux Dependencies.md  README.md
3sem/KPROG/labs/lab8/JUCE/docs/doxygen/: Doxyfile  process_source_files.py
3sem/KPROG/labs/lab8/JUCE/examples/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/examples/CMake/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/examples/CMake/AudioPlugin/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/examples/CMake/ConsoleApp/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/examples/CMake/GuiApp/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/examples/DemoRunner/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/examples/GUI/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/extras/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/extras/AudioPerformanceTest/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/extras/AudioPluginHost/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/extras/AudioPluginHost/Builds/Android/: build.gradle
3sem/KPROG/labs/lab8/JUCE/extras/AudioPluginHost/Builds/iOS/: LaunchScreen.storyboard
3sem/KPROG/labs/lab8/JUCE/extras/BinaryBuilder/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/extras/NetworkGraphicsDemo/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/extras/Projucer/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/extras/UnitTestRunner/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/modules/: CMakeLists.txt
3sem/KPROG/labs/lab8/JUCE/modules/juce_audio_devices/native/oboe/: .clang-tidy  CMakeLists.txt  README.md
3sem/KPROG/labs/lab8/JUCE/modules/juce_audio_formats/codecs/flac/: Flac Licence.txt
3sem/KPROG/labs/lab8/JUCE/modules/juce_audio_formats/codecs/oggvorbis/: Ogg Vorbis Licence.txt
3sem/KPROG/labs/lab8/JUCE/modules/juce_audio_plugin_client/AU/AudioUnitSDK/: AUBase.cpp  AUBase.h  AUBuffer.cpp  AUBuffer.h  AUBufferAllocator.cpp  AUEffectBase.cpp  AUEffectBase.h  AUInputElement.cpp  AUInputElement.h  AUMIDIBase.cpp  AUMIDIBase.h  AUMIDIEffectBase.cpp  AUMIDIEffectBase.h  AUMIDIUtility.h  AUOutputElement.cpp  AUOutputElement.h  AUPlugInDispatch.cpp  AUPlugInDispatch.h  AUScopeElement.cpp  AUScopeElement.h  AUSilentTimeout.h  AUUtility.h  AudioUnitSDK.h  ComponentBase.cpp  ComponentBase.h  JUCE CHANGES.txt  MusicDeviceBase.cpp  MusicDeviceBase.h
3sem/KPROG/labs/lab8/JUCE/modules/juce_audio_processors/format_types/LV2_SDK/: README.md  generate_lv2_bundle_sources.py  sord_config.h
3sem/KPROG/labs/lab8/JUCE/modules/juce_audio_processors/format_types/VST3_SDK/: JUCE_README.md
3sem/KPROG/labs/lab8/cmake/: Assets.cmake  Benchmarks.cmake  CHANGELOG.md  GitHubENV.cmake  JUCEDefaults.cmake  PamplejuceIPP.cmake  PamplejuceMacOS.cmake  PamplejuceVersion.cmake  README.md  SharedCodeDefaults.cmake  Tests.cmake  XcodePrettify.cmake
3sem/KPROG/labs/lab8/packaging/: dmg.json  installer.iss
3sem/KPROG/labs/lab8/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  test.asm
3sem/KPROG/labs/lab8/tests/: PluginBasics.cpp
3sem/KPROG/labs/lab8/tests/helpers/: test_helpers.h
3sem/PZMA/: pzma.odt
3sem/filosophy/: metaphizika.odt
3sem/kursach/: coursework.docx  coursrwork.odt
4sem/ABC/: Схема процессора.docx
4sem/ABC/lab1/: CMakeLists.txt  calcS.asm  calcY.asm  main.cpp  report1.docx
4sem/ABC/lab2/: CMakeLists.txt  input.txt  main.cpp  main_gpu.cpp  main_only_gpu.cpp  отчет 2 лаба.docx
4sem/OOP/: kursach_blank.docx
4sem/igil/: .~lock.Лабораторная работа 2.docx#  Лабораторная работа 2.docx
5sem/ABC/: seti
5sem/MPPIU/: 8.pptx  AImazing kids_5.pptx  AImazing kids_6.pptx  MPPiU (E-1439).rar  ПЗ%.rar  ПЗ5.docx  ПЗ8-9.Азаров Сенько 253505.odp  ПЗ8.Азаров Сенько 253505.odp
5sem/SPPR/: 3_Контроллеры.pptx
5sem/STRWEB/: wget-log
5sem/SYSPROG/LAB5/: CMakeLists.txt  Client.cpp  Server.cpp  report5.docx
5sem/kursach/: SenkoZBlank.docx  Smena.docx  tests.ods  Бланк задания на курсовой 2024.docx
6sem/: OED.docx
6sem/DB/: .~lock.Лабораторные_работы_по_подгруппам_№1_№3 (2).docx#  docker-compose.yml
6sem/MTRAN/: 1.docx
6sem/OISB/lab4/: CMakeLists.txt  Lab4.docx  attack.cpp  client.cpp  server.cpp
6sem/OSISP/lab6/: CMakeLists.txt  README.md  Traceroute.cpp  Traceroute.h  main.cpp
6sem/OSISP/lab6/tests/: TracerouteTests.cpp
6sem/PRACTICs/: Практика.docx
6sem/kursacz/: .$Схемы.drawio.bkp  Пример_бланк_задания_КП_2025_ОСиСП.docx  Схемы.drawio  курсач (3).docx  курсач.docx
7sem/MZI/: Лабораторные МЗИ 10.10.2024.docx
7sem/OUIS/: ОУИС, ПЗ №4 (Патентные пошлины).docx  ПЗ №2.docx  ПЗ №5 ОУИС.docx  ПРАКТИЧЕСКОЕ ЗАДАНИЕ №3.docx
7sem/TOFD/: ghkink.txt
PROJECT_AI/dataset/: base.blend  main.py
PROJECT_X/: final.md  report tests.docx  report tests.odt  report.docx  report.md
PROJECT_X/dip/: TZ.odt
PROJECT_X/from_server/: 123.txt
PROJECT_X/new_generation/: .gitignore  Untitled.ipynb  dataset-gen.ipynb  (+4 more)
(+856 files in other folders)
